# lib_posix

./: CMakeLists.txt  README.md  build.sh  change-compiler.sh  check-compilers.sh  check-env.sh  cmake  compiler_paths.txt  config.cmake  coverage.txt  generate-flags.sh  install.sh  profile.txt  uninstall.sh  x.c
include/p101_posix/: p101_aio.h  p101_ctype.h  p101_dirent.h  p101_dlfcn.h  p101_fcntl.h  p101_fnmatch.h  p101_glob.h  p101_grp.h  p101_iconv.h  p101_langinfo.h  p101_locale.h  p101_netdb.h  p101_nl_types.h  p101_poll.h  p101_pthread.h  p101_pwd.h  p101_regex.h  p101_sched.h  p101_semaphore.h  p101_setjmp.h  p101_signal.h  p101_stdio.h  p101_stdlib.h  p101_string.h  p101_strings.h  p101_termios.h  p101_time.h  p101_unistd.h  p101_utime.h  p101_wchar.h  p101_wctype.h  p101_wordexp.h
include/p101_posix/arpa/: p101_inet.h
include/p101_posix/net/: p101_if.h
include/p101_posix/sys/: p101_mman.h  p101_select.h  p101_socket.h  p101_stat.h  p101_statvfs.h  p101_times.h  p101_utsname.h  p101_wait.h
src/: aio.c  ctype.c  dirent.c  dlfcn.c  fcntl.c  fnmatch.c  glob.c  grp.c  iconv.c  langinfo.c  locale.c  netdb.c  nl_types.c  poll.c  pthread.c  pwd.c  regex.c  sched.c  semaphore.c  setjmp.c  signal.c  stdio.c  stdlib.c  string.c  strings.c  termios.c  time.c  unistd.c  utime.c  wchar.c  wctype.c  wordexp.c
src/arpa/: inet.c
src/net/: if.c
src/sys/: mman.c  select.c  socket.c  stat.c  statvfs.c  times.c  utsname.c  wait.c
